--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,18 +2,49 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #E5E5E5;
+    height: 2000px; /*Provisório*/
 }
 
 header{
     width: 100%;
-    height: 29px;
-    height: 50px;
+    height: 54px;
     background-color: #FFFFFF;
-    border-bottom: 1px solid #FF0000;
+    border-bottom: 1px solid #DBDBDB;
+    position: fixed;
 }
+
+.container {
+    max-width: 936px;
+    display: flex;
+    margin: 0 auto;
+}
+
 header .container{
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.container input{
+    width: 215px;
+    height: 28px;
+    border: 1px solid #DBDBDB;
+    border-radius: 3px;
+    outline: none;
+    color: #979797;
+    padding: 0 10px;
+}
+.container input::placeholder{
+    color: #979797;
+    text-align: center;
+}
+
+.icons_header{
+    display: flex;
+}
+.icons_header ion-icon{
+    margin-left: 20px;
 }
 
 .icons-properties{
@@ -30,10 +61,16 @@ header .container{
     padding-left: 10px;
     margin-left: 10px;
     border-left: 1px solid #DBDBDB;
+    height: 29px;
 }
 
-.container {
-    max-width: 614px;
-    margin: 0 auto;
+.left-column{
+    flex: 1;
+}
+
+.right-column{
+    width: 294px;
+    height: 463px;
+    background-color: #FFFF00;
 }
 
