--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ header{
     background-color: #FFFFFF;
     border-bottom: 1px solid #DBDBDB;
     position: fixed;
+    z-index: 999;
 }
 
 .container {
@@ -117,9 +118,78 @@ header .container{
     text-overflow: ellipsis;
 }
 
+.feed{
+    width: 614px;
+    margin-top: 24px;
+}
+.header_post{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 15px 17px 13px 17px;
+}
+.header_post > div{
+    display: flex;
+    align-items: center;
+}
+.header_post img{
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+.userName_post{
+    font-size: 14px;
+    color: #262626;
+    font-weight: 500;
+}
+
+.post{
+    width: 100%;
+    height: 749px;
+    border: 1px solid #DBDBDB;
+    border-radius: 3px;
+    margin-bottom: 60px;
+}
+.post > img{
+    width: 612px;
+    height: 612px;
+}
+.actions_post{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px 15px;
+}
+.actions_post > div{
+    display: flex;
+    align-items: center;
+}
+.actions_post > div > ion-icon {
+    margin-right: 14px;
+}
+
+.numberOfLikes_post{
+    display: flex;
+    align-items: center;
+    margin-left: 15px;
+    font-size: 14px;
+    font-weight: 300;
+}
+.numberOfLikes_post > img{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+.numberOfLikes_post > span{
+    font-weight: 500;
+}
+
 .right-column{
     width: 294px;
     height: 463px;
-    background-color: #FFFF00;
+    background-color: #EEEEEE;
+    margin-top: 55px;
 }
 
