--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,6 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    height: 2000px; /*Provisório*/
     background-color: rgb(250, 250, 250);
 }
 
@@ -36,6 +35,8 @@ header .container{
     outline: none;
     color: #979797;
     padding: 0 10px;
+    background-color: rgb(250, 250, 250);
+    font-size: 12px;
 }
 .container input::placeholder{
     color: #979797;
@@ -45,7 +46,7 @@ header .container{
 .icons_header{
     display: flex;
 }
-.icons_header ion-icon{
+.icons_header a{
     margin-left: 20px;
 }
 
@@ -87,11 +88,14 @@ header .container{
     position: absolute;
     bottom: 35%;
     right: 10px;
+    border-radius:50%;
+    color: white;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-.button-right ion-icon{
-    width: 32px;
-    height: 32px;
+.button-right:hover{
+    cursor: pointer;
 }
+
 .stories_slider{
     width: 100%;
     height: 100%;
@@ -102,7 +106,6 @@ header .container{
     width: 66px;
     height: 91px;
     margin: 18px 0 0 14px;
-    
 }
 .bg-img{
     background: url(../icons/stories_background.jpg);
@@ -140,7 +143,10 @@ header .container{
     align-items: center;
     margin: 15px 17px 13px 17px;
 }
-.header_post > div{
+ion-icon[name="ellipsis-horizontal"]{
+    color: #262626;
+}
+.header_post a{
     display: flex;
     align-items: center;
 }
@@ -171,13 +177,13 @@ header .container{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 10px 15px;
+    margin: 9px 15px;
 }
 .actions_post > div{
     display: flex;
     align-items: center;
 }
-.actions_post > div > ion-icon {
+.actions_post > div > a {
     margin-right: 14px;
 }
 
@@ -188,7 +194,7 @@ header .container{
     font-size: 14px;
     font-weight: 300;
 }
-.numberOfLikes_post > img{
+.numberOfLikes_post > a > img{
     width: 20px;
     height: 20px;
     border-radius: 50%;
@@ -211,16 +217,16 @@ header .container{
 .owner-profile > img{
     margin-right: 17px;
 }
-.desc-profile{
-    font-size: 12px;
+.owner-profile .desc-profile{
+    font-size: 14px;
     color: #8E8E8E;
     font-weight: 300;
 }
 .desc-profile > span{
-    color: #000000;
+    color: #262626;
     font-weight: 500;
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 2px;
     font-size: 14px;
 }
 
@@ -256,7 +262,16 @@ header .container{
     font-size: 12px;
     font-weight: 500;
 }
-.suggestion-profile span{
-    
+.suggestion-profile .desc-profile{
+    font-size: 12px;
+    color: #8E8E8E;
+    font-weight: 300;
 }
 
+.info{
+    font-size: 11px;
+    color: #C7C7C7;
+}
+.info div:first-child{
+    margin: 35px 0 19px 0;
+}
